2007-05-31  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaWindow.cpp (GetSubwindowAtPoint): Make
	this more robust to failures, avoiding infinite loops if the
	window has disappeared.
	(SendMouseEvent): Fix mouse clicks by using GetTarget instead of
	GetCurrentTarget.  Previously, with FF 2.0.0.3+, motion events
	would work correctly, but clicks were always relative to 0,0.

2007-05-31  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/content.js: Add all the window types.

	* compzilla/chrome/content/atoms.js (Atoms): Make this awesome.

2007-05-31  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaControl.cpp (Filter): Ignore
	CreateNotify, ConfigureRequest, and MapRequest events if the
	event's parent attr is not root.

	Rename minimize.js to minmax.js.

2007-05-31  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/frame.js: Add _updateContentSize, which
	increments _ignoreConfigureCount, and calls _content.onmoveresize. In the
	configure event handler, ignore the event if _ignoreConfigureCount
	> 0, and decrement it.  Call _updateContentSize at the end of show.

	* compzilla/chrome/content/minimize.js: Add a custom jQuery easing
	method that calls _focusedFrame._updateContentSize.  Set animate
	to true, and use the custom animation.  Call w._updateContentSize
	in the animation finished callback.

	* compzilla/chrome/content/content.js: Don't spew so much in
	onmoveresize.

2007-05-31  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/skin/compzilla.css: Hide side/bottom frame
	borders for maximized windows.

	* compzilla/chrome/content/start.xul: Add uiDlgBorderLeft/Right
	helper classes to border divs, to simplify the css rules.

2007-05-30  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/util.js: Use jQuery.extend here too.

2007-05-30  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/content/start.js: initialize our workarea.
